--- a/Exercice1/Exercice1.cbp
+++ b/Exercice1/Exercice1.cbp
@@ -31,6 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Exercice1.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
