--- a/Exercice6/Exercice6.cbp
+++ b/Exercice6/Exercice6.cbp
@@ -31,6 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Exercice6.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
